Fixed sibling block wrapping float in user profile

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3237,3 +3237,9 @@ body.page-help section div.libraryh3lp a:hover img {
     margin: 8px 0;
   }
 }
+
+/* User profile */
+
+article.user-profile section {
+  overflow: hidden;
+}
